--- a/_includes/default/header/header.html
+++ b/_includes/default/header/header.html
@@ -74,3 +74,13 @@
     {%- include default/header/meta-schema-markup.html %}
   {%- endif %}
 {%- endif %}
+
+<script type="text/x-mathjax-config">
+  MathJax.Hub.Config({
+    tex2jax: {
+      skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
+      inlineMath: [['$','$']]
+    }
+  });
+</script>
+<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script> 
