--- a/_includes/default/header/header.html
+++ b/_includes/default/header/header.html
@@ -75,6 +75,7 @@
   {%- endif %}
 {%- endif %}
 
+<!--reference : https://stackoverflow.com/questions/26275645/how-to-support-latex-in-github-pages-->
 <script type="text/x-mathjax-config">
   MathJax.Hub.Config({
     tex2jax: {
